add intro in Results section, #13

--- a/latex/ms.tex
+++ b/latex/ms.tex
@@ -268,14 +268,31 @@ Let a parameter set ($N_1$, $N_2$, $M$, ${\bar \lambda_1}$, ${\bar \lambda_2}$, 
 
 \section{Results}\label{sec3}
 
-\section{Discussion}\label{sec4}
-
-
+We numerically evaluated the performance of ${\hat M}$ or ${\hat m}$ for the case in which variable reproductive potential among parents. Scaled statistical properties of ${\hat m_1}$,  ${\hat m_2}$,  ${\hat m_3}$ and ${\hat m_4}$ are completely the same to ${\hat M_1}$, ${\hat M_2}$, ${\hat M_3}$ and ${\hat M_4}$, hereafter, we only demonstrate the results of ${\hat M_1}$-${\hat M_5}$. {\bf Figure~\ref{violins}} illustrates the distribution of the relative bias of ${\hat M}$ for limiting cases where parent and offspring sample numbers are identical (i.e., $n=n_{\rm P,1}=n_{\rm P,2}=n_{\rm O,1}= n_{\rm O,2}$) and parent numbers in the two populations are also identical (i.e., $N=N_1=N_2$). Relative bias is calculated by applying outputs of the individual-based model, which is defined as follows: ``averaged estimator - true value/true value.'' Full list of parameter sets to evaluate the performance (relative bias and CV of ${\hat M}$) is summarized in {\bf Table S1} in {\bf Supporting Information}. 
+ 
 %%%%%%%%%%%%%%
 \begin{center}
 \fbox{Figure \ref{violins} is here. }
 \end{center}
 %%%%%%%%%%%%%%
+
+\subsection{Properties of ${\hat M}$}
+
+%property of M_i (all are unbiased estimators (accuracy), M_3 shows the best performance (precision))
+
+\subsection{Required sample size}
+
+\subsection{Invasive sampling}
+
+\subsection{Case of $N_1 \neq N_2$}
+
+
+
+
+\section{Discussion}\label{sec4}
+
+
+
 
 
 \begin{comment}
